// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`caption snapshots Caption: 0 1`] = `
<p
  className="typography-0-1-1 typography__8-0-1-9 caption-0-1-11 caption__1-0-1-12"
>
  Caption test string default
</p>
`;

exports[`caption snapshots Caption: 1 1`] = `
<p
  className="typography-0-1-1 typography__8-0-1-9 caption-0-1-11 caption__1-0-1-12"
>
  Caption test string size 1
</p>
`;

exports[`caption snapshots Caption: 2 1`] = `
<p
  className="typography-0-1-1 typography__9-0-1-10 caption-0-1-11 caption__2-0-1-13"
>
  Caption test string size 2
</p>
`;

exports[`caption snapshots Caption: 3 1`] = `
<span
  className="typography-0-1-1 typography__8-0-1-9 caption-0-1-11 caption__1-0-1-12"
>
  span tag test string
</span>
`;

exports[`caption snapshots Caption: 4 1`] = `
<caption
  className="typography-0-1-1 typography__8-0-1-9 caption-0-1-11 caption__1-0-1-12"
>
  caption tag test string
</caption>
`;

exports[`caption snapshots Caption: 5 1`] = `
<figcaption
  className="typography-0-1-1 typography__8-0-1-9 caption-0-1-11 caption__1-0-1-12"
>
  figcaption tag test string
</figcaption>
`;
